# MatlabLR

./: CMakeLists.txt  LRSplineSurface.m  README.md  lrsplinesurface_interface.cpp
Examples/: FEM_poisson.m
NavierStokes/: L2edge.m  assembleLinEl.m  assembleNavierStokes.m  bezierToBsplineBasis.m  cavity.m  collocationPoint.m  getBSplineHighDerivative.m  getBezierBasis.m  getQuiverPlotMatrices.m  getSurfacePlotMatrices.m  integrateNorms.m  knot_insertion_matrix.m  lineIntegrate.m  main_assemble.m  main_dump_final_results.m  main_dump_iteration_results.m  main_dump_results.m  main_getGeom.m  main_init.m  main_init_iteration.m  main_make_exact_solution.m  main_static.m  main_time_loop.m  makeDivPlot.m  makeGeom.m  makeMovie.m  makePlots.m  neumannBndryCond.m  piolaTransform.m  plotContinuityMesh.m  problem_backstep.m  problem_benchmark_cylinder.m  problem_cavity.m  problem_channel.m  problem_exact_cavity.m  problem_exact_nonPoly.m  problem_exact_nonhomogen.m  problem_exact_p3.m  problem_exact_p5.m  problem_exact_sinus.m  (+8 more)
Poisson/: integrateNorms.m  main_assemble.m  main_dump_final_results.m  main_dump_iteration_results.m  main_getGeom.m  main_init.m  main_init_iteration.m  main_make_exact_solution.m  main_static.m  problem_exact_sinus.m
UnsteadyStokes/: GaussLegendre.m  LegendreDerivative.m  assembleSteadyStokes.m  cavity.m  computeGeometry.m  getQuiverPlotMatrices.m  getSurfacePlotMatrices.m  makeDivPlot.m  setPressureBndryCond.m  weaklyEnforceBndryCond.m
cmake/Modules/: FindMatlab.cmake
include/: class_handle.hpp
src/: LRSplineSurface.m  getBSplineBasisAndDerivative.m  lrsplinesurface_interface.cpp
src/matlab/: LRNURBSSurface.m  LRSplineSurface.m  lrgui.m  lrsplinesurface_tikz.m
